Refactor : AbstractMap.SimpleEntry 적용